--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@heroicons/react": "^1.0.6",
     "@iconify/icons-mdi": "^1.2.43",
     "@iconify/react": "^4.1.0",
-    "google-map-react": "^2.2.0",
+    "geolib": "^3.3.3",
+    "firebase": "^9.17.2",
     "mapbox-gl": "^2.13.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-map-gl": "^7.0.21"
+    "react-map-gl": "^7.0.21",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "google-map-react": "^2.1.9",
+    "react-scripts": "4.0.0",
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
